add sphinxbase python module
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10402 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -16,3 +16,24 @@ m4/ltoptions.m4
 m4/ltsugar.m4
 m4/ltversion.m4
 INSTALL
+*.lo
+.deps
+.libs
+.libs
+src/programs/pocketsphinx_batch
+Makefile
+config.log
+config.status
+libtool
+multisphinx.pc
+doc/doxyfile
+doc/doxytags
+doc/html
+doc/latex
+include/config.h
+include/sphinx_config.h
+include/stamp-h1
+include/stamp-h2
+python/build
+*.la
+python/pymod-build-stamp
