first step of refsactor
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10406 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/src/libpocketsphinx/Makefile.am
+++ b/multisphinx/src/libpocketsphinx/Makefile.am
@@ -37,6 +37,7 @@ libpocketsphinx_la_SOURCES =			\
 noinst_HEADERS =				\
 	pocketsphinx_internal.h			\
 	acmod.h					\
+	bptbl.h					\
 	ngram_search.h				\
 	bin_mdef.h				\
 	blkarray_list.h				\
