extract all fwdtree related stuff from ngram_search into a separate module, fwdflat is next
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10454 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/configure.in
+++ b/multisphinx/configure.in
@@ -116,4 +116,5 @@ test/unit/test_string/Makefile
 test/unit/test_fe/Makefile
 test/unit/test_util/Makefile
 test/unit/test_logmath/Makefile
+test/unit/test_search/Makefile
 ])
