--- a/multisphinx/test/unit/test_search/Makefile.am
+++ b/multisphinx/test/unit/test_search/Makefile.am
@@ -1,10 +1,12 @@
 check_PROGRAMS = \
-	test_fwdtree
+	test_fwdtree \
+	test_fwdflat
 
 TESTS = $(check_PROGRAMS)
 
 INCLUDES = \
 	-I$(top_srcdir)/include/sphinxbase \
+	-I$(top_srcdir)/src/libpocketsphinx \
 	-I$(top_builddir)/include \
 	-DTESTDATADIR=\"$(top_srcdir)/test/data\"
 
