split out fwdflat search (but it does not work yet)
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10458 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/src/libpocketsphinx/Makefile.am
+++ b/multisphinx/src/libpocketsphinx/Makefile.am
@@ -17,6 +17,7 @@ libpocketsphinx_la_SOURCES =			\
 	fsg_lextree.c				\
 	fsg_search.c				\
 	fwdtree_search.c			\
+	fwdflat_search.c			\
 	hmm.c					\
 	mdef.c					\
 	ms_gauden.c				\
@@ -49,6 +50,7 @@ noinst_HEADERS =				\
 	fsg_lextree.h				\
 	fsg_search_internal.h			\
 	fwdtree_search.h			\
+	fwdflat_search.h			\
 	hmm.h					\
 	mdef.h					\
 	ms_gauden.h				\
