make fwdflat work properly
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10459 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -40,3 +40,4 @@ python/pymod-build-stamp
 python/setup.py
 test/unit/testfuncs.sh
 test/unit/test_search/test_fwdflat
+test/unit/test_search/test_fwdtree
