make fwdflat and fwdtree coexist properly
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10483 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/test/unit/test_search/Makefile.am
+++ b/multisphinx/test/unit/test_search/Makefile.am
@@ -1,7 +1,8 @@
 check_PROGRAMS = \
 	test_bptbl \
 	test_fwdtree \
-	test_fwdflat
+	test_fwdflat \
+	test_fwdtree_fwdflat
 
 TESTS = $(check_PROGRAMS)
 
