ignore lots of stuff
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10493 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -42,3 +42,69 @@ test/unit/testfuncs.sh
 test/unit/test_search/test_fwdflat
 test/unit/test_search/test_fwdtree
 test/unit/test_search/test_fwdtree_fwdflat
+test/unit/test_alloc/test_ckd_alloc
+test/unit/test_alloc/test_ckd_alloc_abort
+test/unit/test_alloc/test_ckd_alloc_catch
+test/unit/test_alloc/test_ckd_alloc_fail
+test/unit/test_alloc/test_listelem_alloc
+test/unit/test_bitvec/test_bitvec
+test/unit/test_case/chgCase
+test/unit/test_cmdln/cmdln_parse
+test/unit/test_cmdln/cmdln_parse_multiple
+test/unit/test_cmdln/cmdln_parse_r
+test/unit/test_fe/test_fe
+test/unit/test_fe/test_pitch
+test/unit/test_feat/test_feat
+test/unit/test_feat/test_feat_fe
+test/unit/test_feat/test_feat_live
+test/unit/test_feat/test_subvq
+test/unit/test_fsg/test_fsg_jsgf
+test/unit/test_fsg/test_fsg_read
+test/unit/test_fsg/test_fsg_write_fsm
+test/unit/test_hash/deletehash
+test/unit/test_hash/displayhash
+test/unit/test_hash/test_hash_iter
+test/unit/test_logmath/test_log_int16
+test/unit/test_logmath/test_log_int8
+test/unit/test_logmath/test_log_shifted
+test/unit/test_logmath/tmp.logadd
+test/unit/test_ngram/100.tmp.DMP
+test/unit/test_ngram/100.tmp.arpa
+test/unit/test_ngram/test_lm_add
+test/unit/test_ngram/test_lm_casefold
+test/unit/test_ngram/test_lm_class
+test/unit/test_ngram/test_lm_iter
+test/unit/test_ngram/test_lm_mmap
+test/unit/test_ngram/test_lm_read
+test/unit/test_ngram/test_lm_recode
+test/unit/test_ngram/test_lm_score
+test/unit/test_ngram/test_lm_set
+test/unit/test_ngram/test_lm_write
+test/unit/test_search/test_bptbl
+test/unit/test_string/strtest
+test/unit/test_string/test_atof
+test/unit/test_thread/000.log
+test/unit/test_thread/001.log
+test/unit/test_thread/002.log
+test/unit/test_thread/003.log
+test/unit/test_thread/004.log
+test/unit/test_thread/005.log
+test/unit/test_thread/006.log
+test/unit/test_thread/007.log
+test/unit/test_thread/008.log
+test/unit/test_thread/009.log
+test/unit/test_thread/test_event
+test/unit/test_thread/test_msgq
+test/unit/test_thread/test_thread
+test/unit/test_thread/test_tls_log
+test/unit/test_util/bittest.out
+test/unit/test_util/foo
+test/unit/test_util/huffcode.out
+test/unit/test_util/hufftest.out
+test/unit/test_util/quux
+test/unit/test_util/test_bit_encode
+test/unit/test_util/test_build_directory
+test/unit/test_util/test_filename
+test/unit/test_util/test_fopen
+test/unit/test_util/test_heap
+test/unit/test_util/test_huff_code
