oh gosh arc buffer kind of works at last
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10494 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -108,3 +108,4 @@ test/unit/test_util/test_filename
 test/unit/test_util/test_fopen
 test/unit/test_util/test_heap
 test/unit/test_util/test_huff_code
+test/unit/test_search/test_arc_buffer
