--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -109,3 +109,4 @@ test/unit/test_util/test_fopen
 test/unit/test_util/test_heap
 test/unit/test_util/test_huff_code
 test/unit/test_search/test_arc_buffer
+test/unit/test_search/test_acmod_copy
