make bptbl "work" with -maxwpf, not really like it should though
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10515 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/test/unit/test_search/Makefile.am
+++ b/multisphinx/test/unit/test_search/Makefile.am
@@ -4,7 +4,8 @@ check_PROGRAMS = \
 	test_arc_buffer \
 	test_fwdtree \
 	test_fwdflat \
-	test_fwdtree_fwdflat
+	test_fwdtree_fwdflat \
+	test_fwdtree_maxwpf
 
 TESTS = $(check_PROGRAMS)
 
