remove active_fr from bptbl, first_invert_bp is next
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10520 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -110,3 +110,4 @@ test/unit/test_util/test_heap
 test/unit/test_util/test_huff_code
 test/unit/test_search/test_arc_buffer
 test/unit/test_search/test_acmod_copy
+test/unit/test_search/test_fwdtree_maxwpf
