compiling but not working map vocab
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10525 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/src/programs/Makefile.am
+++ b/multisphinx/src/programs/Makefile.am
@@ -1,7 +1,13 @@
-bin_PROGRAMS = pocketsphinx_batch
+bin_PROGRAMS = pocketsphinx_batch \
+	pocketsphinx_map_vocab
 
 pocketsphinx_batch_SOURCES = batch.c
 pocketsphinx_batch_LDADD = \
+	$(top_builddir)/src/libsphinxbase/libsphinxbase.la \
+	$(top_builddir)/src/libpocketsphinx/libpocketsphinx.la
+
+pocketsphinx_map_vocab_SOURCES = map_vocab.c
+pocketsphinx_map_vocab_LDADD = \
 	$(top_builddir)/src/libsphinxbase/libsphinxbase.la \
 	$(top_builddir)/src/libpocketsphinx/libpocketsphinx.la
 
