compiles but does not work (thought i committed this, weird)
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10527 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/configure.in
+++ b/multisphinx/configure.in
@@ -117,4 +117,5 @@ test/unit/test_fe/Makefile
 test/unit/test_util/Makefile
 test/unit/test_logmath/Makefile
 test/unit/test_search/Makefile
+test/unit/test_vocab_map/Makefile
 ])
