--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -111,3 +111,4 @@ test/unit/test_util/test_huff_code
 test/unit/test_search/test_arc_buffer
 test/unit/test_search/test_acmod_copy
 test/unit/test_search/test_fwdtree_maxwpf
+src/programs/pocketsphinx_map_vocab
