make the tests pass again
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10528 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/test/unit/test_search/Makefile.am
+++ b/multisphinx/test/unit/test_search/Makefile.am
@@ -13,7 +13,8 @@ INCLUDES = \
 	-I$(top_srcdir)/include/sphinxbase \
 	-I$(top_srcdir)/src/libpocketsphinx \
 	-I$(top_builddir)/include \
-	-DTESTDATADIR=\"$(top_srcdir)/test/data\"
+	-DTESTDATADIR=\"$(top_srcdir)/test/data\" \
+	-DMODELDIR=\"$(top_srcdir)/model\"
 
 LDADD = ${top_builddir}/src/libsphinxbase/libsphinxbase.la \
 	 ${top_builddir}/src/libpocketsphinx/libpocketsphinx.la
