feature buffer API complete more or less time to test it
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10531 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/configure.in
+++ b/multisphinx/configure.in
@@ -118,4 +118,5 @@ test/unit/test_util/Makefile
 test/unit/test_logmath/Makefile
 test/unit/test_search/Makefile
 test/unit/test_vocab_map/Makefile
+test/unit/test_acmod/Makefile
 ])
