--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -112,3 +112,4 @@ test/unit/test_search/test_arc_buffer
 test/unit/test_search/test_acmod_copy
 test/unit/test_search/test_fwdtree_maxwpf
 src/programs/pocketsphinx_map_vocab
+test/unit/test_util/test_garray
