work on feature buffers and synchronization, not quite robust enough yet
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10533 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -113,3 +113,4 @@ test/unit/test_search/test_acmod_copy
 test/unit/test_search/test_fwdtree_maxwpf
 src/programs/pocketsphinx_map_vocab
 test/unit/test_util/test_garray
+test/unit/test_acmod/test_sync_array
