promote sync_array to an official thing
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10535 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/include/sphinxbase/Makefile.am
+++ b/multisphinx/include/sphinxbase/Makefile.am
@@ -37,4 +37,5 @@ sphinxbaseinclude_HEADERS =			\
 	profile.h				\
 	sbthread.h				\
 	sphinxbase_export.h			\
-	strfuncs.h
+	strfuncs.h				\
+	sync_array.h
