--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -114,3 +114,4 @@ test/unit/test_search/test_fwdtree_maxwpf
 src/programs/pocketsphinx_map_vocab
 test/unit/test_util/test_garray
 test/unit/test_acmod/test_sync_array
+test/unit/test_acmod/test_featbuf
