acmod tst seems to work now
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10545 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -115,3 +115,4 @@ src/programs/pocketsphinx_map_vocab
 test/unit/test_util/test_garray
 test/unit/test_acmod/test_sync_array
 test/unit/test_acmod/test_featbuf
+test/unit/test_acmod/test_acmod
