update a whole bunch of stuff to get acmod working again with utterance start signals, partially write the search main loop
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10547 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/src/libpocketsphinx/Makefile.am
+++ b/multisphinx/src/libpocketsphinx/Makefile.am
@@ -21,6 +21,7 @@ libpocketsphinx_la_SOURCES =			\
 	ms_mgau.c				\
 	ms_senone.c				\
 	ps_alignment.c				\
+	ps_search.c				\
 	ptm_mgau.c				\
 	sendump.c				\
 	s2_semi_mgau.c				\
