min_ef_width is now irrelevant because the input bptbl is pruned - also fix various other problems that were making second pass fwdflat unbearably slow and inaccurate
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10564 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -116,3 +116,4 @@ test/unit/test_util/test_garray
 test/unit/test_acmod/test_sync_array
 test/unit/test_acmod/test_featbuf
 test/unit/test_acmod/test_acmod
+gmon.out
