Fixes some MMIE glitches
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10584 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/SphinxTrain/etc/sphinx_train.cfg
+++ b/SphinxTrain/etc/sphinx_train.cfg
@@ -70,7 +70,7 @@ $CFG_LIST_DIR = "$CFG_BASE_DIR/etc";
 $CFG_LANGUAGEWEIGHT = "11.5";
 $CFG_BEAMWIDTH      = "1e-100";
 $CFG_WORDBEAM       = "1e-80";
-$CFG_LANGUAGEMODEL  = "__LANGUAGE_MODEL_FILE__";
+$CFG_LANGUAGEMODEL  = "$CFG_LIST_DIR/$CFG_DB_NAME.lm.DMP";
 $CFG_WORDPENALTY    = "0.2";
 
 # Lattice pruning variables
@@ -79,6 +79,7 @@ $CFG_NBEAM              = "1e-10";
 $CFG_PRUNED_DENLAT_DIR  = "$CFG_BASE_DIR/pruned_denlat";
 
 # MMIE training related variables
+$CFG_MMIE = "no";
 $CFG_MMIE_MAX_ITERATIONS = 5;
 $CFG_LATTICE_DIR = "$CFG_BASE_DIR/lattice";
 $CFG_MMIE_TYPE   = "rand"; # Valid values are "rand", "best" or "ci"
