add multisphinx stuff and a parallel decoder test
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10594 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -117,3 +117,5 @@ test/unit/test_acmod/test_sync_array
 test/unit/test_acmod/test_featbuf
 test/unit/test_acmod/test_acmod
 gmon.out
+src/programs/multisphinx_batch
+test/unit/test_search/test_fwdtree_multiple
