vocabulary maps and sorting oh my
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10602 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -119,3 +119,6 @@ test/unit/test_acmod/test_acmod
 gmon.out
 src/programs/multisphinx_batch
 test/unit/test_search/test_fwdtree_multiple
+test/data/bn.*.arpa.*
+test/data/bn.5000.arpa
+test/unit/test_vocab_map/test_vocab_map
