working and tested vocabulary map, now that is progress
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10606 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/src/libpocketsphinx/Makefile.am
+++ b/multisphinx/src/libpocketsphinx/Makefile.am
@@ -32,6 +32,7 @@ libpocketsphinx_la_SOURCES =			\
 	state_align_search.c			\
 	tmat.c					\
 	vector.c				\
+	vocab_map.c				\
 	pocketsphinx.c
 
 noinst_HEADERS =				\
