oh hey, vocabulary mapping, it "works"
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10607 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -122,3 +122,4 @@ test/unit/test_search/test_fwdtree_multiple
 test/data/bn.*.arpa.*
 test/data/bn.5000.arpa
 test/unit/test_vocab_map/test_vocab_map
+test/unit/test_search/test_fwdtree_fwdflat_homos
