--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -123,3 +123,4 @@ test/data/bn.*.arpa.*
 test/data/bn.5000.arpa
 test/unit/test_vocab_map/test_vocab_map
 test/unit/test_search/test_fwdtree_fwdflat_homos
+test/unit/test_ngram/test_ngram_trie
