--- a/multisphinx/test/unit/test_ngram/Makefile.am
+++ b/multisphinx/test/unit/test_ngram/Makefile.am
@@ -8,16 +8,24 @@ check_PROGRAMS = \
 	test_lm_class \
 	test_lm_set \
 	test_lm_iter \
-	test_lm_write
+	test_lm_write \
+	test_ngram_trie
 
 TESTS = $(check_PROGRAMS)
 
 INCLUDES = \
 	-I$(top_srcdir)/include/sphinxbase \
+	-I$(top_srcdir)/src/libpocketsphinx \
 	-I$(top_builddir)/include \
+	-DTESTDATADIR=\"$(top_srcdir)/test/data\" \
+	-DMODELDIR=\"$(top_srcdir)/model\" \
 	-DLMDIR=\"${srcdir}\"
 
 LDADD = ${top_builddir}/src/libsphinxbase/libsphinxbase.la
+
+test_ngram_trie_LDADD = \
+	${top_builddir}/src/libsphinxbase/libsphinxbase.la \
+	${top_builddir}/src/libpocketsphinx/libpocketsphinx.la
 
 noinst_HEADERS = test_macros.h
 
