--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -124,3 +124,10 @@ test/data/bn.5000.arpa
 test/unit/test_vocab_map/test_vocab_map
 test/unit/test_search/test_fwdtree_fwdflat_homos
 test/unit/test_ngram/test_ngram_trie
+test/datatmp.bn10000.3g.arpa
+test/unit/test_ngram/foo.txt
+test/unit/test_ngram/tmp.bn10000.3g.arpa
+test/unit/test_search/foo.txt
+massif.out.*
+test/unit/test_search/test_fwdtree_multiple.hyp
+massif.txt.*
