mostly complete C port of ngram_homos.py (need backoff weight computation and validation still)
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10623 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -131,3 +131,4 @@ test/unit/test_search/foo.txt
 massif.out.*
 test/unit/test_search/test_fwdtree_multiple.hyp
 massif.txt.*
+src/programs/ngram_homos
