--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -132,3 +132,4 @@ massif.out.*
 test/unit/test_search/test_fwdtree_multiple.hyp
 massif.txt.*
 src/programs/ngram_homos
+test/unit/test_vocab_map/test_vocab_mapper
