--- a/SphinxTrain/src/libs/Makefile
+++ b/SphinxTrain/src/libs/Makefile
@@ -43,8 +43,7 @@
 TOP=../..
 DIRNAME=src/libs
 BUILD_DIRS = libcep_feat libcommon libmllr \
-             libclust libio libmodinv libs2io \
-	     $(LAPACK_LITE)
+             libclust libio libmodinv libs2io
 ALL_DIRS= $(BUILD_DIRS)
 FILES = Makefile README
 
