put arc buffers in the base ps_search structure (this messes up a bunch of #includes in ways i do not quite understand) and add output arc buffers to fwdflat as well as the beginning of a lattice generation pass
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10689 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/src/libpocketsphinx/Makefile.am
+++ b/multisphinx/src/libpocketsphinx/Makefile.am
@@ -20,6 +20,7 @@ libpocketsphinx_la_SOURCES =			\
 	fwdtree_search.c			\
 	fwdflat_search.c			\
 	hmm.c					\
+	latgen_search.c				\
 	mdef.c					\
 	ms_gauden.c				\
 	ms_mgau.c				\
@@ -48,6 +49,7 @@ noinst_HEADERS =				\
 	fwdtree_search.h			\
 	fwdflat_search.h			\
 	hmm.h					\
+	latgen_search.h				\
 	mdef.h					\
 	ms_gauden.h				\
 	ms_mgau.h				\
