--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -134,3 +134,5 @@ massif.txt.*
 src/programs/ngram_homos
 test/unit/test_vocab_map/test_vocab_mapper
 test/unit/test_search/test_latgen
+test/unit/test_search/test_batch.hyp
+test/unit/test_search/test_batch.sh
