export some headers to the multisphinx directory as they are going to get wrapped so we can write decoders in python
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10699 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/configure.in
+++ b/multisphinx/configure.in
@@ -87,6 +87,7 @@ AC_OUTPUT([
 multisphinx.pc
 Makefile
 include/Makefile
+include/multisphinx/Makefile
 include/sphinxbase/Makefile
 python/Makefile
 python/setup.py
