--- a/multisphinx/src/programs/Makefile.am
+++ b/multisphinx/src/programs/Makefile.am
@@ -7,5 +7,6 @@ LDADD = \
 	$(top_builddir)/src/libsphinxbase/libsphinxbase.la \
 	$(top_builddir)/src/libpocketsphinx/libpocketsphinx.la
 INCLUDES = -I$(top_srcdir)/include \
+	-I$(top_srcdir)/include/multisphinx \
 	-I$(top_srcdir)/src/libpocketsphinx \
 	-I$(top_builddir)/include
