fix encapsulation for multisphinx headers
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10701 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/include/multisphinx/Makefile.am
+++ b/multisphinx/include/multisphinx/Makefile.am
@@ -15,5 +15,4 @@ multisphinxinclude_HEADERS =			\
 	ps_alignment.h				\
 	s3types.h				\
 	state_align_search.h			\
-	vocab_map.h				\
-	vocab_mapper.h
+	vocab_map.h
