start writing new lattice code starting with a node id map
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10702 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/configure.in
+++ b/multisphinx/configure.in
@@ -119,6 +119,7 @@ test/unit/test_util/Makefile
 test/unit/test_logmath/Makefile
 test/unit/test_search/Makefile
 test/unit/test_search/test_batch.sh
+test/unit/test_lattice/Makefile
 test/unit/test_vocab_map/Makefile
 test/unit/test_acmod/Makefile
 ])
