--- a/multisphinx/test/unit/Makefile.am
+++ b/multisphinx/test/unit/Makefile.am
@@ -13,4 +13,5 @@ SUBDIRS= test_alloc				\
 	test_thread				\
 	test_acmod				\
 	test_search				\
-	test_vocab_map
+	test_vocab_map				\
+	test_lattice
