test node id maps
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10704 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -136,3 +136,4 @@ test/unit/test_vocab_map/test_vocab_mapper
 test/unit/test_search/test_latgen
 test/unit/test_search/test_batch.hyp
 test/unit/test_search/test_batch.sh
+test/unit/test_lattice/test_nodeid_map
