first lattice test
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10705 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -137,3 +137,4 @@ test/unit/test_search/test_latgen
 test/unit/test_search/test_batch.hyp
 test/unit/test_search/test_batch.sh
 test/unit/test_lattice/test_nodeid_map
+test/unit/test_lattice/test_htk_lattice
