skeleton for other tests
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10706 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -138,3 +138,6 @@ test/unit/test_search/test_batch.hyp
 test/unit/test_search/test_batch.sh
 test/unit/test_lattice/test_nodeid_map
 test/unit/test_lattice/test_htk_lattice
+test/unit/test_lattice/test_build_lattice
+test/unit/test_lattice/test_forward_backward
+test/unit/test_lattice/test_partial_backward
