reading/writing htk lattices working
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10711 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -141,3 +141,4 @@ test/unit/test_lattice/test_htk_lattice
 test/unit/test_lattice/test_build_lattice
 test/unit/test_lattice/test_forward_backward
 test/unit/test_lattice/test_partial_backward
+test/unit/test_lattice/test_htk_lattice.slf
