--- a/multisphinx/test/unit/test_lattice/Makefile.am
+++ b/multisphinx/test/unit/test_lattice/Makefile.am
@@ -20,4 +20,4 @@ LDADD = ${top_builddir}/src/libsphinxbase/libsphinxbase.la \
 
 noinst_HEADERS = test_macros.h
 
-CLEANFILES = *.log
+CLEANFILES = *.log test_htk_lattice.slf
