double-ended queues
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10716 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -144,3 +144,4 @@ test/unit/test_lattice/test_partial_backward
 test/unit/test_lattice/test_htk_lattice.slf
 test/unit/test_lattice/test_htk_lattice.dot
 test/unit/test_lattice/test_build_lattice.dot
+test/unit/test_util/test_gq
