add the ability to add entire n-grams to the trie, use this to good effect to track lm states in ms_lattice, and also add a test for it
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10725 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/test/unit/test_ngram/Makefile.am
+++ b/multisphinx/test/unit/test_ngram/Makefile.am
@@ -15,6 +15,7 @@ TESTS = $(check_PROGRAMS)
 
 INCLUDES = \
 	-I$(top_srcdir)/include/sphinxbase \
+	-I$(top_srcdir)/include/multisphinx \
 	-I$(top_srcdir)/src/libpocketsphinx \
 	-I$(top_builddir)/include \
 	-DTESTDATADIR=\"$(top_srcdir)/test/data\" \
