also the switch to node ids in iterators broke stuff badly too. argh.
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10733 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/multisphinx/.bzrignore
+++ b/multisphinx/.bzrignore
@@ -145,3 +145,4 @@ test/unit/test_lattice/test_htk_lattice.slf
 test/unit/test_lattice/test_htk_lattice.dot
 test/unit/test_lattice/test_build_lattice.dot
 test/unit/test_util/test_gq
+test/unit/test_lattice/expanded.dot
