Adds missing file to headers. Fixes distcheck
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10781 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/pocketsphinx/src/libpocketsphinx/Makefile.am
+++ b/pocketsphinx/src/libpocketsphinx/Makefile.am
@@ -58,6 +58,7 @@ noinst_HEADERS =				\
 	ptm_mgau.h				\
 	s2_semi_mgau.h				\
 	s3types.h				\
+	state_align_search.h			\
 	tied_mgau_common.h			\
 	tmat.h					\
 	vector.h
