Add iconv to the libraries. Required on cygwin
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10782 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/pocketsphinx/python/setup.py.in
+++ b/pocketsphinx/python/setup.py.in
@@ -6,6 +6,7 @@ except:
 import distutils.command.install
 import os
 import commands
+import sys
 
 class bogus_uninstall(distutils.command.install.install):
     """
@@ -70,6 +71,10 @@ else:
                    '@sphinxbase@/include']
     sb_libdirs = ['@sphinxbasebuild@/src/libsphinxbase/.libs']
 
+libraries = ['sphinxbase', 'pocketsphinx']
+if sys.platform == "cygwin":
+      libraries.append('iconv')
+
 setup(name = 'PocketSphinx',
       version = '@VERSION@',
       author = 'David Huggins-Daines',
@@ -80,7 +85,7 @@ setup(name = 'PocketSphinx',
       ext_modules = [
         Extension('pocketsphinx',
                    sources=['pocketsphinx.c'],
-                   libraries=['pocketsphinx', 'sphinxbase'],
+                   libraries=libraries,
                    include_dirs=['@top_builddir@/include',
                                  '@top_srcdir@/include',
                                  '@top_srcdir@/python',
