We actually already have test_ps_reinit. This one is more about update
git-svn-id: svn://svn.code.sf.net/p/cmusphinx/code/trunk@10825 94700074-3cef-4d97-a70e-9c8c206c02f5

--- a/pocketsphinx/test/unit/Makefile.am
+++ b/pocketsphinx/test/unit/Makefile.am
@@ -16,6 +16,7 @@ check_PROGRAMS = \
 	test_ps_simple \
 	test_ps_nbest \
 	test_ps_lattice \
+	test_ps_update \
 	test_acmod \
 	test_acmod_grow \
 	test_fwdtree \
@@ -35,7 +36,6 @@ check_PROGRAMS = \
 	test_senfh \
 	test_alignment \
 	test_state_align \
-	test_reinit \
 	$(gst_programs)
 
 TESTS = $(check_PROGRAMS)
